<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">WILLing</string>
    <string name="app_name_test">WILLing(内测)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxccvbnm1234567890</string>
    <string name="password">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxccvbnm1234567890</string>
    <string name="invite">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxccvbnm1234567890</string>
    <string name="loading_text">加载中…</string>
    <string name="error_http_net_work_exception">无网络连接</string>
    <string name="error_http_url_exception">服务器地址有误</string>
    <string name="error_http_time_out_exception">网络状态不好，请重试</string>
    <string name="error_http_json_exception">解析异常</string>
    <string name="error_http_service_exception">服务器异常</string>
    <string name="error_http_not_content">这个上下文没有继承BaseActivity</string>
    <string name="error_http_not">未知错误</string>
    <string name="check_version_not">当前已是最新版本</string>
    <string name="exit_exception">很抱歉，程序异常，即将退出</string>
    <string name="second_exit_app">再次点击退出程序</string>
    <string name="copy_success">复制成功</string>
    <string name="not_data">暂无记录</string>
    <string name="save_image_success">保存到相册成功</string>
    <string name="save_image_fail">保存失败</string>
    <string name="token_error">登录信息失效，请重新登录</string>
    <string name="jy_password_error">请先设置支付密码</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_save">保存</string>
    <string name="update_title">是否下载最新BVSE版本？</string>
    <string name="update_btn">下载</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="forget_title">忘记密码</string>
    <string name="modify_login_psw_title">修改登录密码</string>
    <string name="modify_pay_psw_title">修改支付密码</string>
    <string name="setting_pay_psw_title">设置支付密码</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="forget_btn">忘记密码</string>
    <string name="login_send_sms_code_btn">获取验证码</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_send_sms_code_hint">请输入验证码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_again_hint">请再次输入密码</string>
    <string name="login_password_old_hint">请输入旧密码</string>
    <string name="login_password_new_hint">请输入新密码</string>
    <string name="login_password_new_again_hint">请再次输入密码</string>
    <string name="login_invite_hint">请输入邀请码</string>
    <string name="login_error_phone_1">手机号不能为空</string>
    <string name="login_error_phone_2">手机号输入有误</string>
    <string name="login_error_code_1">验证码不能为空</string>
    <string name="login_error_code_2">验证码输入有误</string>
    <string name="login_error_psw_1">密码不能为空</string>
    <string name="login_error_psw_2">密码输入有误</string>
    <string name="login_error_psw_again_1">两次密码输入不一致</string>
    <string name="login_error_psw_old_1">旧密码不能为空</string>
    <string name="login_error_psw_old_2">旧密码输入有误</string>
    <string name="login_error_psw_new_1">新密码不能为空</string>
    <string name="login_error_psw_new_2">新密码输入有误</string>
    <string name="login_error_invite_1">邀请码不能为空</string>
    <string name="main_vote">投票</string>
    <string name="main_app">应用</string>
    <string name="main_wallet">钱包</string>
    <string name="main_my">我的</string>
    <string name="notice_detail">公告详情</string>
    <string name="to_view_content">查看全文</string>
    <string name="pack_up_content">收起全文</string>
    <string name="view_content">展开</string>
    <string name="pack_content">收起</string>
    <string name="main_my_title">我的</string>
    <string name="main_my_feedback">问题反馈</string>
    <string name="main_my_setting">账户设置</string>
    <string name="main_my_language">语言切换</string>
    <string name="main_my_invited_text">我的邀请码</string>
    <string name="main_my_invited">邀请好友</string>
    <string name="main_my_name">请登录</string>
    <string name="main_my_invited_icon_text">邀 请 好 友</string>
    <string name="main_my_invited_icon_toast">邀请得MOS奖励</string>
    <string name="main_home_name">名称</string>
    <string name="main_home_now_price">最新价</string>
    <string name="main_home_range">涨跌幅</string>
    <string name="main_home_node_game">节点竞赛</string>
    <string name="main_wallet_title">钱包</string>
    <string name="main_wallet_total_asset">总资产</string>
    <string name="main_wallet_available_asset">可用资产</string>
    <string name="feedback_title">问题反馈</string>
    <string name="notice_center_title">公告详情</string>
    <string name="activity_release_title">释放记录</string>
    <string name="usd_help_title">使用帮助</string>
    <string name="rush_record_title">抢购记录</string>
    <string name="account_setting_title">账户设置</string>
    <string name="account_setting_out_login">退出登录</string>
    <string name="account_setting_set_password">密码设置</string>
    <string name="account_setting_address_manager">地址管理</string>
    <string name="account_setting_check_version">检查更新</string>
    <string name="language_title">语言</string>
    <string name="language_simple_zh">简体中文</string>
    <string name="language_en">English</string>
    <string name="password_setting_title">密码设置</string>
    <string name="password_setting_modify_login">修改登录密码</string>
    <string name="password_setting_modify_pay">修改支付密码</string>
    <string name="password_setting_modify_pay_psw">修改支付密码</string>
    <string name="password_setting_setting_pay_psw">设置支付密码</string>
    <string name="invite_friend_title">邀请好友</string>
    <string name="invite_friend_my">我的邀请链接</string>
    <string name="invite_friend_copy">复制链接</string>
    <string name="feed_back_edit_hint">感谢您对产品提出的宝贵问题，我们会尽快优化产品，提升用户体验</string>
    <string name="feed_back_btn">提交</string>
    <string name="feed_back_error_1">提交内容不能为空</string>
    <string name="feed_back_error_2">手机号不能为空</string>
    <string name="recharge_toast">转账前务必确认地址是否正确，如输入错误后果自负</string>
    <string name="recharge_toast1">充值地址</string>
    <string name="recharge_btn">复制充值地址</string>
    <string name="withdrawal_title">转账</string>
    <string name="withdrawal_toast">转账前务必确认地址是否正确，如输入错误后果自负</string>
    <string name="withdrawal_toast1">提示：</string>
    <string name="withdrawal_toast2">转账手续费为等值的1%BVSE，最低10个BVSE</string>
    <string name="withdrawal_btn">确定</string>
    <string name="withdrawal_fee">转账手续费：</string>
    <string name="withdrawal_balance">可用余额：</string>
    <string name="withdrawal_address_hint">请输入地址</string>
    <string name="withdrawal_amount_hint">请输入转账数量</string>
    <string name="withdrawal_error_1">地址不能为空</string>
    <string name="withdrawal_error_2">数量不能为空</string>
    <string name="withdrawal_error_3">余额不足</string>
    <string name="withdrawal_error_4">数量输入有误</string>
    <string name="withdrawal_error_5">密码不能为空</string>
    <string name="withdrawal_error_6">请先设置支付密码</string>
    <string name="window_password_edit_hint">请输入支付密码</string>
    <string name="window_password_btn">确定</string>
    <string name="window_password_edit_title">输入支付密码</string>
    <string name="window_password_edit_send">请输入短信验证码</string>
    <string name="window_password_error_1">支付密码不能为空</string>
    <string name="window_password_error_2">支付密码错误</string>
    <string name="window_password_error_3">短信验证码不能为空</string>
    <string name="window_password_error_4">短信验证码错误</string>
    <string name="call_my_title">联系我们</string>
    <string name="call_my_save">保存二维码</string>
    <string name="call_my_we_chat">微信</string>
    <string name="copy_wechat_name">复制微信号</string>
    <string-array name="wallet_tab">
        <item>账户</item>
        <item>释放</item>
        <item>兑换</item>
        <item>行情</item>
    </string-array>
    <string-array name="wallet_coin_tab">
        <item>全部</item>
        <item>转账</item>
        <item>收款</item>
    </string-array>
    <string name="wallet_release_type">释放类型</string>
    <string name="wallet_release_number">数量</string>
    <string name="wallet_release_time">时间</string>
    <string name="wallet_exchange_title">兑换记录</string>
    <string name="wallet_exchange_base_amount">可用</string>
    <string name="wallet_exchange_target_amount">兑换后收到</string>
    <string name="wallet_exchange_btn">兑换</string>
    <string name="wallet_exchange_record">兑换记录</string>
    <string name="wallet_exchange_toast">兑换规则</string>
    <string name="wallet_exchange_fee">手续费</string>
    <string name="wallet_exchange_rate">汇率≈</string>
    <string name="wallet_exchange_toast1">
        1.GVI与USDT兑换比例为1:1；\n
        
        2.实时汇率是从主流交易所实时获取，具体兑换所得的Token数量，可在输入兑换数量后查看。
    </string>
    <string name="wallet_coin_detail_transfer">转账</string>
    <string name="wallet_coin_detail_recharge">收款</string>
    <string name="item_wallet_release_type_1">投票释放</string>
    <string name="item_wallet_release_type_2">团队投票收益</string>
    <string name="item_wallet_release_type_3">合伙人收益</string>
    <string name="item_wallet_release_type_4">加盟店收益</string>
    <string name="item_wallet_release_type_5">品牌收益</string>
    <string name="item_wallet_release_type_0">系统福利</string>
    <string name="my_vote">我的投票</string>
    <string name="my_team">我的团队</string>
    <string name="my_join">加盟申请</string>
    <string name="my_join_message">我的加盟详情</string>
    <string name="my_money">资金记录</string>
    <string name="my_account">账户设置</string>
    <string name="my_submitted_review">已提交审核</string>
    <string name="app_recommend">推荐</string>
    <string name="app_vote">投票加盟</string>
    <string name="app_partner">合伙人列表</string>
    <string name="app_competition">竞赛排名</string>
    <string name="app_shop">GVI商城</string>
    <string name="app_util">工具</string>
    <string name="app_H_coin">Hcoin</string>
    <string name="app_huo_bi">火币</string>
    <string name="app_eth">ETH浏览器</string>
    <string name="app_btc">BTC浏览器</string>
    <string name="app_game">娱乐</string>
    <string name="app_not">敬请期待</string>
    <string name="app_plane">打飞机</string>
    <string name="app_soft">学习</string>
    <string name="app_kong_yi_college">孔壹学院</string>
    <string name="user_info">账户信息</string>
    <string name="nick_name">昵称</string>
    <string name="user_phone">手机号</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="content_save">保存</string>
    <string name="enter_nickname">请输入修改昵称</string>
    <string name="enter_nickname_introduce">3–16个字符，支持中文、数字、下划线以及加减号，不支持其它特殊符号</string>
    <string name="join_id">加盟商ID</string>
    <string name="join_name">加盟商名称</string>
    <string name="vote_time">投票时间</string>
    <string name="vote_day">投票周期</string>
    <string name="vote_number">投票数量（GVI）</string>
    <string name="release_day">已释放天数</string>
    <string name="release_number">累计释放（GVI）</string>
    <string name="vote_record">投票记录</string>
    <string name="total_number">总业绩（GVI）</string>
    <string name="team_account">账户</string>
    <string name="team_register_time">注册时间</string>
    <string name="team_results">业绩（GVI）</string>
    <string name="sign_task">任务中心</string>
    <string name="sign_task_rules">任务规则</string>
    <string name="rules">
     1.签到领BVSE：总共领三周，每周前五天每天领两个，后两天每天领三个；连续签到7天后可点亮第二个任务（投票），后边两周还可以继续领BVSE；\n\n
     2.投票任务：需要投票1000GVI，以此点亮第三个任务；\n\n
        3.邀请任务：需要推荐其他用户投票3000GVI；
    </string>
    <string name="success_rules">完成以上任务可获得</string>
    <string name="sign_gift">签到有礼，免费送BVSE～</string>
    <string name="sign_rules"><font color="red">连续</font>签到<font color="red">七天</font>即可点亮下方推荐任务！记得是<font color="red">连续</font>签到，中断就不算了哦～</string>
    <string name="sign_btn">马上签到领币～</string>
    <string name="tuijain_task">推荐任务</string>
    <string name="toupiao_task">投票任务</string>
    <string name="join_task">参与任务获取更多BVSE</string>
    <string name="chose_camer">从相册选取</string>
    <string name="take_photo">拍照</string>
</resources>