<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".ui.wallet.activity.WithdrawalActivity">

    <include layout="@layout/include_title_bar" />

    <TextView
        android:id="@+id/transfer_toast"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#22FE3848"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/withdrawal_toast"
        android:textColor="#FE3848"
        android:textSize="14dp" />

    <LinearLayout
        android:background="@drawable/shape_back_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="34dp">

            <ImageView
                android:id="@+id/withdrawal_sweep"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/sweep" />

            <EditText
                android:id="@+id/withdrawal_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/withdrawal_sweep"
                android:background="@drawable/shape_edit_transfer"
                android:digits="@string/address"
                android:gravity="center_vertical"
                android:hint="@string/withdrawal_address_hint"
                android:maxLength="43"
                android:paddingLeft="16dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="14dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="20dp">

            <Space
                android:id="@+id/view1"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <EditText
                android:id="@+id/withdrawal_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/view1"
                android:background="@drawable/shape_edit_transfer"
                android:gravity="center_vertical"
                android:hint="@string/withdrawal_amount_hint"
                android:inputType="numberDecimal"
                android:maxLength="40"
                android:paddingLeft="16dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="14dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="#E5E5E5 " />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <TextView
                android:id="@+id/withdrawal_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_balance"
                android:textColor="#333333"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/withdrawal_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/withdrawal_fee"
                android:textColor="#666666"
                android:textSize="14dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/withdrawal_btn"
            android:layout_width="228dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="67dp"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:text="@string/withdrawal_btn"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_toast1"
                android:textColor="#666666"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_toast2"
                android:textColor="#999999"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
