<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <ImageButton
            android:id="@+id/window_password_return"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:src="@mipmap/window_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/window_password_edit_title"
            android:textSize="20dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/window_password_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_edit_window"
        android:digits="@string/password"
        android:hint="@string/window_password_edit_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="15dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="@dimen/text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_edit_window"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/window_password_send"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/shape_edit_window"
            android:hint="@string/window_password_edit_send"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="15dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/window_send_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/forget_login_psw_send_sms_code"
            android:textSize="12dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/window_password_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_margin="25dp"
        android:text="@string/window_password_btn" />

</LinearLayout>