<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.app.AppFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/main_app_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_recommend"
                    android:textColor="#333333"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_vote"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_vote"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_vote"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_partner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_partner"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_partner"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_competition"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_competition"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_competition"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_shop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_shop"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_shop"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/app_util"
                    android:textColor="#333333"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_eth"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_eth"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_eth"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_btc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_btc"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_btc"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_H_coin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_h_coin"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_H_coin"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/app_huo_bi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_huo_bi"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_huo_bi"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/app_game"
                    android:textColor="#333333"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/main_app_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical" />
                    <include layout="@layout/include_game_date"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/app_soft"
                    android:textColor="#333333"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_kong_yi_college"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/app_kong_yi_college"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/app_kong_yi_college"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>